Cancel queued packages when creating blacklist items
Add new endpoint to preview the effect of blacklisting a package
